log
Wed, Mar 19, 2025  8:45:11 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  8:58:02 AM: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:19: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
       pushBack(L, i);
                   ^
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:20:6: note: expected 'void *' but argument is of type 'int'
 void pushBack(List *L, void *dato);
      ^~~~~~~~
In file included from test.c:5:0:
exercises.c:47:9: error: unused variable 'elem' [-Werror=unused-variable]
    int *elem; //puntero a los elementos que guardaremos
         ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
58afaed
Wed, Mar 19, 2025  8:59:40 AM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:52:19: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
       pushBack(L, valor);
                   ^~~~~
In file included from exercises.c:6:0,
                 from test.c:5:
arraylist.h:20:6: note: expected 'void *' but argument is of type 'int'
 void pushBack(List *L, void *dato);
      ^~~~~~~~
In file included from test.c:5:0:
exercises.c:47:9: error: unused variable 'elem' [-Werror=unused-variable]
    int *elem; //puntero a los elementos que guardaremos
         ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0869ae1
Wed, Mar 19, 2025  9:00:20 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:51:20: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
       int *valor = i + 1;
                    ^
exercises.c:47:9: error: unused variable 'elem' [-Werror=unused-variable]
    int *elem; //puntero a los elementos que guardaremos
         ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ed78e35
Wed, Mar 19, 2025  9:01:43 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
8c388bd
Wed, Mar 19, 2025  9:05:24 AM: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
ea94bba
